--- a/BinaryGap/tests/CMakeLists.txt
+++ b/BinaryGap/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ link_directories(${EXTERNAL_INSTALL_LOCATION}/lib)
 file(GLOB APP_SOURCES ${CMAKE_SOURCE_DIR}/src/*.h)
 file(GLOB TEST_SOURCES ${CMAKE_SOURCE_DIR}/tests/*.cpp ${CMAKE_SOURCE_DIR}/tests/*.h)
 
-add_executable(test ${TEST_SOURCES} ${APP_SOURCES})
+add_executable(unit-test ${TEST_SOURCES} ${APP_SOURCES})
 #set_target_properties(test PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
-add_dependencies(test googletest)
-target_link_libraries(test gtest pthread)
+add_dependencies(unit-test googletest)
+target_link_libraries(unit-test gtest pthread)
